feat: se actualiza openapi
