# src/main/resources/openapi/api.yaml
@@ -10,6 +10,37 @@ tags:
   description: Gestión de cuentas bancarias
 paths:
   /v1.0/accounts/{id}:
+    get:
+      tags:
+      - Account API
+      summary: Obtener una cuenta por id
+      description: Busca una cuenta bancaria por id
+      operationId: getAccountById
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        "404":
+          description: Cuenta no encontrada
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Account'
+        "500":
+          description: Error interno del servidor
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Account'
+        "200":
+          description: Cuenta encontrada
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Account'
     put:
       tags:
       - Account API
@@ -32,6 +63,12 @@ paths:
       responses:
         "404":
           description: Cuenta no encontrada
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Account'
+        "500":
+          description: Error interno del servidor
           content:
             '*/*':
               schema:
@@ -59,6 +96,8 @@ paths:
           description: Cuenta no encontrada
         "200":
           description: Cuenta eliminada exitosamente
+        "500":
+          description: Error interno del servidor
   /v1.0/accounts:
     get:
       tags:
@@ -102,13 +141,25 @@ paths:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Account'
+        "500":
+          description: Error interno del servidor
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Account'
         "400":
           description: Error en la validación de la cuenta
           content:
             '*/*':
               schema:
                 $ref: '#/components/schemas/Account'
-  /v1.0/accounts/{number}:
+        "404":
+          description: Cliente no encontrado
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Account'
+  /v1.0/accounts/byNumber/{number}:
     get:
       tags:
       - Account API
@@ -124,6 +175,12 @@ paths:
       responses:
         "404":
           description: Cuenta no encontrada
+          content:
+            '*/*':
+              schema:
+                $ref: '#/components/schemas/Account'
+        "500":
+          description: Error interno del servidor
           content:
             '*/*':
               schema:
